    FederalUniversities

 ; https://kantiana.ru ; news/?filter_news_ff%5BTAGS%5D=%D0%9D%D0%B0%D1%83%D0%BA%D0%B0&filter_news_pf%5BPERSONS%5D=&set_filter=Y ; .news-item__wrapper.col-12.col-sm-6 ; .news-item__title ; a ; href ; .news-item__date ; .page__content.news-item__content
 ; https://www.dvfu.ru ; science/news/ ; .row.news-item ; .news-item-short ; a ; href ; .news-item-date ; .news-item-full
 ; https://media.kpfu.ru ; news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; a ; href ; .newsItem-date ; .body-text
 ; https://science.cfuv.ru ;   ; .vl-archive-post ; .entry-title ; h2.entry-title a ; href ; .entry-date ; .entry-content
 ; Проблема с промежуточным сертификатом SSL ; https://www.s-vfu.ru ; universitet/nauka/news/ ; .u-shadow-v11.g-bg-white ; .h5.g-color-black ; .h5.g-color-black a ; href ; .btn.btn-xs.u-btn-indigo ; .h5.g-color-black
https://ncfu.ru ; novosti/nauka/ ; .news__item ; .news__title ; a ; href ; .news__date ; .user-content.news-content
    NationalUniversities

 ; https://kf.bmstu.ru ; news?t=%D0%BD%D0%B0%D1%83%D0%BA%D0%B0 ; .l-news-list-col ; .l-news-title ; a ; href ; .l-news-date ; .l-typography-text
 ; https://www.nsu.ru ; n/media/news/nauka ; .news-list-grid-item ; .name.link-issue ; a ; href ; .date ; .detail_text
 ; https://www.sgu.ru ; news/section/32973 ; .news-feed__announce ; .field.field--name-title ; a ; href ; .news-feed__date ; .news-content__main