@@ -4,8 +4,14 @@
  ; https://www.dvfu.ru ; science/news/ ; .row.news-item ; .news-item-short ; a ; href ; .news-item-date ; .news-item-full
  ; https://media.kpfu.ru ; news?kn%5B0%5D=%D0%9D%D0%BE%D0%B2%D0%BE%D1%81%D1%82%D0%B8%20%D0%BD%D0%B0%D1%83%D0%BA%D0%B8&created ; .newsItem-content ; .newsItem-top a.boldLink ; a ; href ; .newsItem-date ; .body-text
  ; https://science.cfuv.ru ;   ; .vl-archive-post ; .entry-title ; h2.entry-title a ; href ; .entry-date ; .entry-content
- ; Проблема с промежуточным сертификатом SSL ; https://www.s-vfu.ru ; universitet/nauka/news/ ; .u-shadow-v11.g-bg-white ; .h5.g-color-black ; .h5.g-color-black a ; href ; .btn.btn-xs.u-btn-indigo ; .h5.g-color-black
-https://ncfu.ru ; novosti/nauka/ ; .news__item ; .news__title ; a ; href ; .news__date ; .user-content.news-content
+https://narfu.ru ; science/nac_project/news/index.php?sphrase_id=616406 ; .card-grid__item.ajax-load-more-item.1 ; .c-card__title ; a ; href ; .c-card__date ; .text_news
+ ; -- Проблема с промежуточным сертификатом SSL -- ; https://www.s-vfu.ru ; universitet/nauka/news/ ; .u-shadow-v11.g-bg-white ; .h5.g-color-black ; .h5.g-color-black a ; href ; .btn.btn-xs.u-btn-indigo ; .h5.g-color-black
+ ; https://ncfu.ru ; novosti/nauka/ ; .news__item ; .news__title ; a ; href ; .news__date ; .user-content.news-content
+ ; https://news.sfu-kras.ru ; rubric/23 ; .news-item.teaser ; .news-item-annotation ; a ; href ; .news-item-date ; .text.not-teaser
+ ; -- Динамическая загрузка страницы ; https://sfedu.ru/www/stat_pages22.show?p=SCI/main/M
+ ; -- Динамическая загрузка страницы ; https://urfu.ru/ru/science/
+
+
     NationalUniversities
 
  ; https://kf.bmstu.ru ; news?t=%D0%BD%D0%B0%D1%83%D0%BA%D0%B0 ; .l-news-list-col ; .l-news-title ; a ; href ; .l-news-date ; .l-typography-text
